@@ -12,6 +12,6 @@ they're not"
 magix.forms.create-web-part
   container=>content2
   form-id=>inbox
-  class=>span-2 boxed air-padding
+  class=>span-3 boxed air-padding
   controls-file=>system42/private/email/inbox/parts/menu-controls.hl
 
