@@ -7,29 +7,56 @@ creates the show emails web part in content3"
 
 magix.forms.create-web-part
   container=>content3
-  class=>span-18 last boxed air-padding
+  class=>span-17 last boxed air-padding
   form-id=>inbox-list
   events-file=>system42/private/email/inbox/parts/show-emails/events.hl
   controls
     label=>header
-      class=>span-18 last bottom-1
+      class=>span-17 last bottom-1
       tag=>h3
       value=>inbox
     lambda=>list-of-emails
       oncreatecontrols
         magix.data.load=>load-emails
-          start=>0
-          end=>25
           prototype
             type=>magix.email.message
+
+        // sorting emails according to date
+        sort=>[magix.data.load=>load-emails][objects]
+          if=>less-than
+            lhs=>[@][_first][0][value][date].value
+            rhs=>[@][_second][0][value][date].value
+            code
+              add=>[@][..][..][_result]
+                value=>[@][..][..][_second]
+          if=>more-than
+            lhs=>[@][_first][0][value][date].value
+            rhs=>[@][_second][0][value][date].value
+            code
+              add=>[@][..][..][_result]
+                value=>[@][..][..][_first]
+
+        // removing all emails but the 25 emails we're supposed to see from the list of emails
+        _objects
+        while=>less-than
+          lhs=>[_objects].count
+          rhs=>25
+          code
+            add=>[_objects]
+              value=>[magix.data.load=>load-emails][objects][0]
+            set=>[magix.data.load=>load-emails][objects][0]
+        set=>[magix.data.load=>load-emails][objects]
+        add=>[magix.data.load=>load-emails][objects]
+          values=>[_objects]
         _pnl
           panel
-            class=>span-18 last
+            class=>span-17 last
             controls
         for-each=>[magix.data.load][objects]
           _pnl
             label=>{subject-}
               class=>span-8 email-item-subject
+              value=>&nbsp;
               onclick
                 split=>[$][id].value
                   what=>subject-
@@ -40,25 +67,30 @@ magix.forms.create-web-part
                   value=>[$][info].value
                 magix.emails.load-email
             label=>{from-}
-              class=>span-7 email-item-from
+              class=>span-6 email-item-from
             label=>{date-}
               class=>span-3 last email-item-date
             dynamic=>{dynamic-}
+              class=>emails-sleeping-dynamic
           set=>[@][_pnl][label=>{subject-}][info].value
             value=>[.][id].value
-          split=>[.][value][subject].value
-            where=>40
-          set=>[@][_pnl][label=>{subject-}][value].value
-            value=>[@][split][result][0].value
-          if=>more-than
-            lhs=>[@][split][result].count
-            rhs=>1
+          if=>not-equals
+            lhs=>[.][value][subject].value
+            rhs=>
             code
-              set=>[@][..][..][_pnl][label=>{subject-}][title].value
-                value=>[.][value][subject].value
+              split=>[.][value][subject].value
+                where=>40
               set=>[@][..][..][_pnl][label=>{subject-}][value].value
-                value=>{0} ...
-                  =>[@][..][..][_pnl][label=>{subject-}][value].value
+                value=>[@][split][result][0].value
+              if=>more-than
+                lhs=>[@][split][result].count
+                rhs=>1
+                code
+                  set=>[@][..][..][..][..][_pnl][label=>{subject-}][title].value
+                    value=>[.][value][subject].value
+                  set=>[@][..][..][..][..][_pnl][label=>{subject-}][value].value
+                    value=>{0} ...
+                      =>[@][..][..][..][..][_pnl][label=>{subject-}][value].value
           if=>equals
             lhs=>[.][value][from][display-name].value
             rhs=>
